--- a/client/src/public/index.html
+++ b/client/src/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <base href="http://localhost:8000/">
+    <link rel="manifest" crossorigin="use-credentials" href="./manifest.json"/>
     <title>Document</title>
 </head>
 <body>
