Se configuro la notificacion push en el evento de los tiempos

--- a/client/src/public/index.html
+++ b/client/src/public/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" href="./images/logo.ico">
     <link rel="manifest" crossorigin="use-credentials" href="./manifest.json"/>
+    <!-- CODELAB: Add iOS meta tags and icons -->
+    <link rel="apple-touch-icon" href="https://quindiplatanos.s3.amazonaws.com/5ec08c82e07c773c4c78e792-logo.png">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="PWA Clima">
     <title>Document</title>
 </head>
 <body>
     <div id="app"></div>
     <div id="modalPassContainer"></div>
+    <script src="./serviceWorker.js"></script>
 </body>
 </html>
